[package]
name = "tbf"
description = "Finds VOD playlists on Twitch."
version = "0.11.0"
authors = ["vyneer <vyn33r@gmail.com>"]
edition = "2021"

[dependencies]
log = "^0.4"
clap = { version = "4.5.7", features = ["derive", "cargo"] }
env_logger = "0.11.3"
reqwest = { version = "^0.12.4", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }
rayon = "^1.10.0"
sha1 = "^0.10.6"
time = { version = "^0.3", features = ["parsing", "macros"] }
regex = "^1"
indicatif = {version = "*", features = ["rayon"]}
crossterm = "^0.28.1"
scraper = "0.22.0"
url = "^2.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0.9"
lazy_static = "^1.4.0"
colored = "3.0.0"
toml = "^0.8.14"
m3u8-rs = "6.0.0"
alphanumeric-sort = "^1.5.3"
rand = "0.9.0"
anyhow = "^1.0"
strum = { version = "^0.26.2", features = ["derive"] }
semver = "^1.0"
guess_host_triple = "^0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
once_cell = "1.8"

[dev-dependencies]
tempfile = "^3.10"

[profile.release]
debug = false
lto = true
strip = true